welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: ':' expected but ')' found.
def dessine (c) {setCouleurBrosse(c);baisseBrosse():leveBrosse()}
              ^PatternPicture:11: error: identifier expected but '}' found.
}
^