welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def dessine (c) {setCouleurBrosse(c);baisseBrosse():leveBrosse()}

def motif () {avance();dessine(Color.RED);droite;avance;droite();avance();dessine(Color.RED);droite();avance();droite;
             avance();avance();dessine(Color.BLUE);avance();gauche();avance();dessine(Color.BLUE);gauche;avance();avance();avance();avance();droite();avance();dessine(Color.YELLOW);droite();avance();gauche();avance();dessine(Color.YELLOW);droite();avance();dessine(Color.GREEN);;avance;droite;dessine(Color.GREEN);avance();avance();avance();droite();avance();avance();avance();retourne()}

def up() {gauche();avance();avance();avance();avance();avance();droite()}

override def run() { motif(); avance(); avance(); avance(); avance();motif();recule();recule();recule();recule();up();motif();avance();avance();avance();avance();motif();recule();recule();recule();recule();up()
}